[package]
name = "leptos_lints"
version.workspace = true
authors = ["Álvaro Mondéjar Rubio"]
description = "Dylint lints for apps created with the Leptos framework."
edition.workspace = true
license.workspace = true
publish.workspace = true
repository.workspace = true

[lib]
crate-type = ["cdylib"]

[dependencies]
leptos_print_stdout = { path = "lints/leptos_print_stdout", features = ["rlib"] }
dylint_linting.workspace = true

[package.metadata.rust-analyzer]
rustc_private = true

[workspace]
members = [".", "lints/*", "tests", "lints/*/tests/*mock"]

[workspace.package]
version = "0.1.0"
edition = "2024"
publish = false
license = "Apache-2.0"
repository = "https://github.com/leptos-rs/leptos-lints"

[workspace.dependencies]
clippy_utils = { git = "https://github.com/rust-lang/rust-clippy", rev = "0450db33a5d8587f7c1d4b6d233dac963605766b" }
dylint_linting = "4.1.0"
dylint_testing = "4.1.0"

[workspace.lints.clippy]
pedantic = { level = "deny", priority = -1 }
perf = { level = "deny", priority = -1 }
suspicious = { level = "deny", priority = -1 }
style = { level = "deny", priority = -1 }
complexity = { level = "deny", priority = -1 }
cargo = { level = "deny", priority = -1 }
print_stdout = "deny"
too_many_lines = "allow"

[workspace.lints.rust.unexpected_cfgs]
level = "deny"
check-cfg = ["cfg(dylint_lib, values(any()))"]

[workspace.metadata.dylint]
libraries = [
    { path = "." },
]
