[package]
name = "leptos_print_stdout"
authors = ["Álvaro Mondéjar Rubio"]
description = "Check for calls to `leptos::logging::log!`"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true
repository.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[[example]]
name = "call"
path = "tests/ui/call.rs"

[dependencies]
clippy_utils.workspace = true
dylint_linting.workspace = true

[dev-dependencies]
dylint_testing.workspace = true
leptos = { path = "tests/leptos_mock" }

[package.metadata.rust-analyzer]
rustc_private = true

[features]
rlib = ["dylint_linting/constituent"]

[lints]
workspace = true
