[package]
name = "leptos_unscoped_spawn"
authors = ["Álvaro Mondéjar Rubio"]
description = "Forbids the use of `leptos::task::spawn_local`"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true
repository.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[[example]]
name = "leptos_unscoped_spawn_call"
path = "tests/ui/call.rs"

[dependencies]
clippy_utils.workspace = true
dylint_linting.workspace = true

[dev-dependencies]
dylint_testing.workspace = true
leptos = { package = "leptos-unscoped-spawn-mock", path = "tests/leptos_mock" }

[package.metadata.rust-analyzer]
rustc_private = true

[features]
rlib = ["dylint_linting/constituent"]

[lints]
workspace = true
