[package]
name = "leptos-event-target-value-mock"
authors = ["Álvaro Mondéjar Rubio"]
description = "Mock of the `leptos` crate, to use in tests."
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true
repository.workspace = true

[lints]
workspace = true
